# lidl-plus

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENCE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
lidlplus/: __main__.py  api.py  exceptions.py
lidlplus/archive/: __init__.py  receipt.py  site.py
lidlplus/archive/static/: app.js  index.html  style.css
lidlplus/auth/: __init__.py  oauth.py  selenium.py
lidlplus/backup/: __init__.py  sync.py
tests/: conftest.py  test_receipt_items.py  test_receipt_view.py  test_smoke.py
tests/fixtures/: receipt_line_golden.json
