[project]
name = "lidl-plus"
version = "0.4.0"
description = "Lidl Plus API client, incremental receipt backup, and searchable local archive"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Schlomo Schapiro" }]
dependencies = [
    "oic>=1.4.0",
    "python-barcode>=0.16.1",
    "requests>=2.28.1",
]

[project.optional-dependencies]
selenium = [
    "blinker==1.7.0",
    "getuseragent>=0.0.7",
    "pyopenssl>=22.0.0,<26.2",
    "selenium-wire>=5.1.0",
    "setuptools>=80.8.0",
    "webdriver-manager>=3.8.5",
]

[project.scripts]
lidl-plus = "lidlplus.__main__:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lidlplus"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
